--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.47.0",
     "date-fns": "^2.29.3",
+    "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.7.2",
